# Ransomeware_protection

./: ADVANCED_FEATURES_ROADMAP.md  ARCHITECTURE_DIAGRAM.py  ATTACK_RESPONSE_LOGIC.md  AntiRansomware-Setup-1.0.0.checksums.txt  AntiRansomwareDriver.vcxproj  BUILD_SYSTEM.md  Build-Driver-MSBuild.bat  Build-Driver-MSBuild.ps1  Build-Driver-WDK.ps1  Build-KernelDriver.ps1  CODE_OF_CONDUCT.md  COMPREHENSIVE_README.md  ENTERPRISE_DETECTION_GUIDE.md  ENTERPRISE_ENHANCEMENT_SUMMARY.md  EXECUTABLES.md  FIX_SUMMARY_2026-01-03.md  FOUR_LAYER_COMPLETE.md  GAPS_FIXED.md  GITHUB_SECURITY_FIXES.md  HARDWARE_CRYPTO.md  HOW_TO_USE_4LAYER.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLER_GUIDE.md  KERNEL_PROTECTION_GUIDE.md  KERNEL_PROTECTION_README.md  LICENSE.txt  MANIFEST.in  MANUAL_FILE_ADDITION.txt  POPUP_FIX.md  PRODUCTION_COMPLETION_SUMMARY.md  PRODUCTION_GUI.md  PRODUCTION_README.md  PROTECTION_PERF_RECOVERY.md  PROTECTION_POLICY_UPDATE.md  QUICKSTART.md  QUICK_START_GUIDE.md  QUICK_START_TRIFACTOR.md  README.md  README_ADMIN_GUI.md  (+162 more)
CPP-Kernel-Version/: README.md  build_complete.bat
Python-Version/: PYTHON_README.md  README.md  antiransomware_complete.py  antiransomware_python.py  complete_antiransomware.db  config.yaml  dashboard.py  decryptor_support.py  detection_engine.py  file_monitor.py  forensics.py  honeypot_monitor.py  integrity_monitor.py  main.py  memory_dump.py  ml_detector.py  process_monitor.py  quarantine_manager.py  recovery.py  service_manager.py  test_advanced_features.py  test_tpm_ncrypt.py  threat_intelligence.py  tpm_integration.py  train_ml_model.py
archive/: README.md
backups/: backup_codes_1757743008.txt.backup
demo_files/: backup_codes.txt  family_photos.txt  financial_data.csv  financial_data.xlsx  important_document.txt  personal_notes.md  work_project.txt
docs/: Gemfile  _config.yml  api-reference.md  architecture.md  index.md  security-model.md
immune-folders/: README.md
policies/: demo.yaml
protected/: family_photos.txt  financial_data.txt  financial_records.txt  important_document.txt  passwords.txt
protected_files/: backup_codes.txt  financial_data.txt  important_document.txt  personal_photos.txt
scripts/: build_exe.py  cicd.py  install.py
(+186 files in other folders)
