[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antiransomware"
version = "1.0.0"
description = "Enterprise-grade ransomware protection with hardware-gated token enforcement"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Anti-Ransomware Project"}
]
keywords = ["security", "ransomware", "protection", "tpm", "kernel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "flask>=3.0.0",
    "flask-wtf>=1.2.0",
    "waitress>=2.1.2",
    "cryptography>=41.0.7",
    "pynacl>=1.5.0",
    "watchdog>=3.0.0",
    "psutil>=5.9.6",
    "protobuf>=4.25.0",
    "grpcio>=1.59.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
antiransomware = "antiransomware.cli:main"
ar-protect = "antiransomware.cli.protect_files:main"
ar-events = "antiransomware.cli.check_events:main"
ar-kill = "antiransomware.cli.kill_switch:main"
ar-dashboard = "antiransomware.api.dashboard:main"

[project.urls]
Homepage = "https://github.com/johnsonajibi/Ransomware_protection"
Documentation = "https://johnsonajibi.github.io/Ransomware_protection/"
Repository = "https://github.com/johnsonajibi/Ransomware_protection"
Issues = "https://github.com/johnsonajibi/Ransomware_protection/issues"

[tool.setuptools]
packages = ["antiransomware"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
antiransomware = ["py.typed", "*.pyi"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
